--- a/espace_enseignant.html
+++ b/espace_enseignant.html
@@ -15,7 +15,7 @@
         <tr><td>Description</td><td><textarea name="description" id="description"required></textarea></td></tr>
         <tr><td>Public ciblé</td><td><input type="text" id="public" placeholder="public ciblé(ex:2e annee MIP,S4,groupe A)" required></td></tr>
         <tr><td><button onclick="genererLien()">Générer le lien unique </button></td></tr>
-        <tr><td><button onclick="addQuestion()">ajouter_question</button></td></tr>
+        <tr><td><button onclick="addQuestion()">ajouter_question</button><p id="uniqueLink"></p></td></tr>
     </table>
     <script src="espace_enseignat.js"></script>
 </body>
